[gd_scene load_steps=7 format=3 uid="uid://cjr7ffsxboub3"]

[ext_resource type="Theme" uid="uid://cxepw6pfk6m64" path="res://custom_theme.tres" id="1_jyhfs"]
[ext_resource type="Script" uid="uid://u311hdqr38uv" path="res://scripts/GameManager.gd" id="1_sugp2"]
[ext_resource type="Script" uid="uid://f1534wmh3r0a" path="res://scripts/ExplorationManager.gd" id="2_jyhfs"]
[ext_resource type="Script" uid="uid://bpn14da8v1gxo" path="res://scripts/CombatManager.gd" id="3_tbgi4"]
[ext_resource type="Script" uid="uid://5rlne18u3bms" path="res://scripts/InventoryManager.gd" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://jo044yneufa2" path="res://scripts/combat/CombatAnimationOverlay.gd" id="5_tefeu"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_jyhfs")
script = ExtResource("1_sugp2")

[node name="ExplorationManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jyhfs")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="ExplorationManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="RoomInfo" type="Label" parent="ExplorationManager/VBoxContainer"]
layout_mode = 2

[node name="Connections" type="Label" parent="ExplorationManager/VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="ExplorationManager/VBoxContainer"]
layout_mode = 2

[node name="DungeonMap" type="Control" parent="ExplorationManager/VBoxContainer"]
layout_mode = 2

[node name="CombatManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_tbgi4")

[node name="HeaderContainer" type="PanelContainer" parent="CombatManager"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.00174
anchor_bottom = 0.111111
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="CombatInfo" type="Label" parent="CombatManager/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BattlefieldContainer" type="PanelContainer" parent="CombatManager"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.111111
anchor_right = 1.0
anchor_bottom = 0.677469
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Battlefield" type="HBoxContainer" parent="CombatManager/BattlefieldContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="MenuContainer" type="PanelContainer" parent="CombatManager"]
layout_mode = 0
anchor_left = -0.00173611
anchor_top = 0.671296
anchor_right = 0.282118
anchor_bottom = 1.00154
metadata/_edit_use_anchors_ = true

[node name="MenuMargin" type="CenterContainer" parent="CombatManager/MenuContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="ActionsMenu" type="VBoxContainer" parent="CombatManager/MenuContainer/MenuMargin"]
layout_mode = 2
size_flags_horizontal = 2
alignment = 1

[node name="StatsContainer" type="PanelContainer" parent="CombatManager"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279514
anchor_top = 0.66821
anchor_right = 0.499132
anchor_bottom = 1.00309
offset_top = 3.05176e-05
metadata/_edit_use_anchors_ = true

[node name="StatsMargin" type="CenterContainer" parent="CombatManager/StatsContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="StatusDisplay" type="Label" parent="CombatManager/StatsContainer/StatsMargin"]
layout_mode = 2
size_flags_horizontal = 10

[node name="LogContainer" type="PanelContainer" parent="CombatManager"]
layout_mode = 0
anchor_left = 0.496528
anchor_top = 0.67284
anchor_right = 1.00174
anchor_bottom = 1.00463
metadata/_edit_use_anchors_ = true

[node name="LogMargin" type="MarginContainer" parent="CombatManager/LogContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CombatManager/LogContainer/LogMargin"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CombatManager/LogContainer/LogMargin/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationOverlay" type="Control" parent="CombatManager"]
z_index = 100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_tefeu")
metadata/_edit_use_anchors_ = true

[node name="OverlayBackground" type="ColorRect" parent="CombatManager/AnimationOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.482353)
metadata/_edit_use_anchors_ = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CombatManager/AnimationOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand = true

[node name="DamageNumberContainer" type="Control" parent="CombatManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="InventoryManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_tbgi4")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="LeftPanel" type="VBoxContainer" parent="InventoryManager/HBoxContainer"]
layout_mode = 2

[node name="EquippedItemsPanel" type="Panel" parent="InventoryManager/HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="EquippedItemsLabel" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedItemsPanel"]
layout_mode = 0
offset_right = 402.0
offset_bottom = 36.0
metadata/_edit_use_anchors_ = true

[node name="EquippedItemsContainer" type="VBoxContainer" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedItemsPanel"]
layout_mode = 0
offset_right = 491.0
offset_bottom = 337.0

[node name="WeaponSlot" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedItemsPanel/EquippedItemsContainer"]
layout_mode = 2

[node name="ArmorSlot" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedItemsPanel/EquippedItemsContainer"]
layout_mode = 2

[node name="AccessorySlot" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedItemsPanel/EquippedItemsContainer"]
layout_mode = 2

[node name="EquippedAttacksPanel" type="Panel" parent="InventoryManager/HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="EquippedAttacksLabel" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedAttacksPanel"]
layout_mode = 0
offset_top = 408.0
offset_right = 329.0
offset_bottom = 475.0
metadata/_edit_use_anchors_ = true

[node name="EquippedAttacksContainer" type="VBoxContainer" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedAttacksPanel"]
layout_mode = 0
offset_top = 352.0
offset_right = 570.0
offset_bottom = 649.0
metadata/_edit_use_anchors_ = true

[node name="AttackSlot1" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedAttacksPanel/EquippedAttacksContainer"]
layout_mode = 2

[node name="AttackSlot2" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedAttacksPanel/EquippedAttacksContainer"]
layout_mode = 2

[node name="AttackSlot3" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedAttacksPanel/EquippedAttacksContainer"]
layout_mode = 2

[node name="AttackSlot4" type="Label" parent="InventoryManager/HBoxContainer/LeftPanel/EquippedAttacksPanel/EquippedAttacksContainer"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="InventoryManager/HBoxContainer"]
layout_mode = 2

[node name="ItemSelectionPanel" type="Panel" parent="InventoryManager/HBoxContainer/RightPanel"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="InventoryManager/HBoxContainer/RightPanel/ItemSelectionPanel"]
layout_mode = 0
offset_left = 584.0
offset_top = 4.0
offset_right = 1149.0
offset_bottom = 293.0
current_tab = 0
metadata/_edit_use_anchors_ = true

[node name="WeaponsTab" type="Control" parent="InventoryManager/HBoxContainer/RightPanel/ItemSelectionPanel/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="WeaponsList" type="ItemList" parent="InventoryManager/HBoxContainer/RightPanel/ItemSelectionPanel/TabContainer/WeaponsTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ArmorTab" type="Control" parent="InventoryManager/HBoxContainer/RightPanel/ItemSelectionPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ArmorList" type="ItemList" parent="InventoryManager/HBoxContainer/RightPanel/ItemSelectionPanel/TabContainer/ArmorTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AccessoriesTab" type="Control" parent="InventoryManager/HBoxContainer/RightPanel/ItemSelectionPanel/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="AccessoriesList" type="ItemList" parent="InventoryManager/HBoxContainer/RightPanel/ItemSelectionPanel/TabContainer/AccessoriesTab"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="InstructionsLabel" type="Label" parent="InventoryManager/HBoxContainer/RightPanel/ItemSelectionPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="AttacksPanel" type="Panel" parent="InventoryManager/HBoxContainer/RightPanel"]
layout_mode = 2

[node name="AttacksLabel" type="Label" parent="InventoryManager/HBoxContainer/RightPanel/AttacksPanel"]
layout_mode = 0
offset_left = 723.0
offset_top = 305.0
offset_right = 1139.0
offset_bottom = 356.0
metadata/_edit_use_anchors_ = true

[node name="AttacksList" type="ItemList" parent="InventoryManager/HBoxContainer/RightPanel/AttacksPanel"]
layout_mode = 0
offset_left = 582.0
offset_top = 415.0
offset_right = 1151.0
offset_bottom = 648.0
metadata/_edit_use_anchors_ = true

[node name="AttackInstructions" type="Label" parent="InventoryManager/HBoxContainer/RightPanel/AttacksPanel"]
layout_mode = 0
offset_left = 589.0
offset_top = 346.0
offset_right = 851.0
offset_bottom = 409.0
metadata/_edit_use_anchors_ = true
